--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.5.10",
+    "axios": "^1.4.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
+    "sort-by": "^1.2.0",
+    "styled-components": "5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
